--- a/formulario001.html
+++ b/formulario001.html
@@ -111,8 +111,8 @@
 <body>
     <form action="cadastro.html" method="post" autocomplete="off">
         <h1>Login</h1>
-        <p><label for="login">Username</label>:<input type="text" name="login" id="login"></p>
-        <p><label for="senha">Password</label>:<input type="password" name="senha" id="senha"></p>
+        <p><label for="login">Username</label>:<input type="text" name="login" id="login" required></p>
+        <p><label for="senha">Password</label>:<input type="password" name="senha" id="senha" required></p>
         <input type="submit" value="Entrar" id="botao">
         <img src="imagens/ghost.png" alt="fantasma" id="ghost">
         <img src="imagens/bat.png" alt="morcegos" id="bat">
