Alterações e adições feitas
--Alterações --
pela adição do botão ' esqueci minha senha ' vou adicionar um layout de recuperação de senha, então joguei o estilo para um arquivo css.
Coloquei algumas especificações em login e senha.
--Alterações--
Troquei de post para get por questões de erro no github.

--- a/cadastro.html
+++ b/cadastro.html
@@ -7,7 +7,7 @@
     <title>Em construção...</title>
     <style>
         body {
-            background-image: url(../formulario/imagens/image.jfif);
+            background-image: url(imagens/image.jfif);
             background-repeat: no-repeat;
             background-size: cover;
         }
