--- a/frgtpwrd.html
+++ b/frgtpwrd.html
@@ -14,7 +14,7 @@
             <legend>Password Recovery</legend>
             <p><label for="email">Email</label>: <input type="email" name="email" id="email"></p>
             <p>or</p>
-            <p><label for="tel">Pohne Number</label>: <input type="tel" name="tel" id="tel" max="11" autocomplete="tel"  pattern="[0-9]{2}-[0-9]{5}-[0-9]{4}" placeholder="(xx) xxxxx-xxxx"></p>
+            <p><label for="tel">Pohne Number</label>: <input type="tel" name="tel" id="tel" max="11" autocomplete="tel"  pattern="[0-9]{2}-[0-9]{5}-[0-9]{4}" placeholder="xx-xxxxx-xxxx"></p>
             <input type="submit" value="Submit" id="botao" >
         </fieldset>
         <img src="imagens/ghost.png" alt="fantasma" id="ghost">
